src/objects/ensxapp__SAP_Sales_Doc_Search_Preset_Sort_Field__mdt.object
<CustomObject>
    <description>Sort field definition for Sales Doc Search Preset</description>
    <fields>
        <fullName>ensxapp__Precedence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The priority of this sort field</description>
        <inlineHelpText>Lower number indicates higher precedence</inlineHelpText>
        <label>Precedence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Sales_Doc_Search_Preset__c</fullName>
        <description>The search preset this sort definition belongs to</description>
        <label>SAP Sales Doc Search Preset</label>
        <referenceTo>ensxapp__SAP_Sales_Doc_Search_Preset__mdt</referenceTo>
        <relationshipLabel>SAP Sales Doc Search Preset Sort Fields.</relationshipLabel>
        <relationshipName>SAP_Sales_Doc_Search_Preset_Sort_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Sort_Direction__c</fullName>
        <label>Sort Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                    <default>true</default>
                    <label>Descending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Sort_Field__c</fullName>
        <description>The SAP field to sort by</description>
        <label>Sort Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERDAT</fullName>
                    <default>true</default>
                    <label>Create Date</label>
                </value>
                <value>
                    <fullName>BSTNK</fullName>
                    <label>Customer PONumber</label>
                </value>
                <value>
                    <fullName>NETWR</fullName>
                    <label>Net Order Value</label>
                </value>
                <value>
                    <fullName>VBELN</fullName>
                    <label>Sales Document</label>
                </value>
                <value>
                    <fullName>KUNWE</fullName>
                    <label>Ship To Party</label>
                </value>
                <value>
                    <fullName>KUNAG</fullName>
                    <label>Sold To Party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SAP Sales Doc Search Preset Sort Field</label>
    <pluralLabel>SAP Sales Doc Search Preset Sort Fields.</pluralLabel>
</CustomObject>